tests/baselines/reference/generatorTypeCheck18.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck18.ts(5,11): error TS2741: Property 'x' is missing in type 'Baz' but required in type 'Foo'.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck18.ts (1 errors) ====
    class Foo { x: number }
    class Baz { z: number }
    function* g(): IterableIterator<Foo> {
        yield;
        yield new Baz;
              ~~~~~~~
!!! error TS2741: Property 'x' is missing in type 'Baz' but required in type 'Foo'.
!!! related TS2728 tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck18.ts:1:13: 'x' is declared here.
    }